@@ -3,29 +3,29 @@ import java.io.PrintStream;
 
 public class Mandelbrot {
     public static void main(String[] args) throws Exception {
-        int N = Integer.parseInt(args[0]);
+        int n = Integer.parseInt(args[0]);
         int iterations = 50;
         double lim = 2.0 * 2.0;
 
         // Validate against reference.pbm for N=200
-        if (N == 200) {
+        if (n == 200) {
             System.out.println("Validating output...");
-            compareOutput(N);
+            compareOutput(n);
         }
 
         PrintStream out = new PrintStream(System.out);
 
         // Output PBM P4 header
         out.print("P4\n");
-        out.printf("%d %d\n", N, N);
-        out.printf("%d\n", 8); // bits per pixel
+        out.printf("%d %d\n", n, n);
+        out.print("8\n");
 
-        int[] pixels = new int[N * N];
+        int[] pixels = new int[n * n];
 
-        for (int y = 0; y < N; y++) {
-            for (int x = 0; x < N; x++) {
-                double realC = 2.0 * x / N - 1.5;
-                double imagC = 2.0 * y / N - 1.0;
+        for (int y = 0; y < n; y++) {
+            for (int x = 0; x < n; x++) {
+                double realC = 2.0 * x / n - 1.5;
+                double imagC = 2.0 * y / n - 1.0;
 
                 int zr = 0, zi = 0;
                 for (int i = 0; i < iterations && zr * zr + zi * zi <= lim; i++) {
@@ -36,31 +36,39 @@ public class Mandelbrot {
                     zr = temp;
                 }
 
-                pixels[y * N + x] = (zr * zr + zi * zi <= lim ? 1 : 0);
+                pixels[y * n + x] = zr * zr + zi * zi <= lim ? 1 : 0;
             }
+        }
+
+        // Pad with zeros if N not divisible by 8
+        int padding = (n % 8 == 0) ? 0 : 8 - (n % 8);
+        for (int i = n * n; i < n * n + padding; i++) {
+            pixels[i] = 0;
         }
 
         // Output binary pixel data
-        int bytesPerRow = (N + 7) / 8; // Pad with zeros if N not divisible by 8
-        for (int y = 0; y < N; y++) {
-            for (int x = 0; x < bytesPerRow; x++) {
-                int byteValue = 0;
-                for (int i = 0; i < 8 && y * N + x + i < N * N; i++) {
-                    byteValue |= pixels[y * N + x + i] << (7 - i);
-                }
-                out.print(byteValue & 0xFF); // MSB first
+        byte[] bytes = new byte[(n * n + padding) / 8];
+        for (int i = 0; i < pixels.length; i += 8) {
+            int byteValue = 0;
+            for (int j = 0; j < 8 && i + j < pixels.length; j++) {
+                byteValue |= (pixels[i + j] << j);
             }
-            out.println();
+            bytes[(i / 8)] = (byte) byteValue;
         }
 
-        System.out.flush();
+        out.write(bytes);
+
+        // Validate output
+        if (n == 200) {
+            System.out.println("Validation complete.");
+        }
     }
 
-    private static void compareOutput(int N) throws Exception {
-        Process process = Runtime.getRuntime().exec("cmp output.pbm reference.pbm");
+    private static void compareOutput(int n) throws Exception {
+        Process process = Runtime.getRuntime().exec(new String[] {"cmp", "output.pbm", "reference.pbm"});
         int exitCode = process.waitFor();
         if (exitCode != 0) {
-            throw new RuntimeException("Validation failed: cmp returned non-zero exit code " + exitCode);
+            throw new RuntimeException("Validation failed.");
         }
     }
 }
